--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <button type="button" id="dateselectcancel">Cancel</button>
     </div>
     <div id="schedule"></div>
-    <div id="settings">
+   <!-- <div id="settings">
       <h2>Settings</h2>
       <p><button type="button" id="refreshalts">Refresh alternate schedules</button></p>
       <p><input type="checkbox" name="offline" id="offline"><label for="offline">Work offline? (works only on <a href="https://caniuse.com/#feat=serviceworkers">these browsers</a> &mdash; don't uncheck while offline! :P)</label></p>
@@ -49,7 +49,7 @@
     </div>
     <div id="notes">
       <h2>Notes</h2>
-      <textarea id="notesinput"></textarea>
+      <textarea id="notesinput"></textarea> -->
     </div>
   </body>
 </html>
