--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div id="notes">
       <h2>Notes</h2>
-      <textarea id="notesinput"></textarea> -->
-    </div>
+      <textarea id="notesinput"></textarea>
+    </div> -->
   </body>
 </html>
